src/test/ui/consts/issue-66693.stderr
error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:4:15
   |
LL | const _: () = panic!(1);
   |               ^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:7:19
   |
LL | static _FOO: () = panic!(true);
   |                   ^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693.rs:11:5
   |
LL |     panic!(&1);
   |     ^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: erroneous constant used
  --> $DIR/issue-66693.rs:11:12
   |
LL |     panic!(&1);
   |            ^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

error: aborting due to 4 previous errors

Future incompatibility report: Future breakage diagnostic:
error: erroneous constant used
  --> $DIR/issue-66693.rs:11:12
   |
LL |     panic!(&1);
   |            ^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: `#[deny(const_err)]` on by default

